--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@
 !.npmrc
 !package.json
 !package-lock.json
-!postcss.config.cjs
+!postcss.config.js
 !README.md
 !svelte.config.js
 !tailwind.config.js
