--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"tailwindcss-safe-area": "^0.4.1"
+	}
 }
