--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,43 +24,37 @@ services:
       # Global HTTP -> HTTPS
       - '--entrypoints.web.http.redirections.entryPoint.to=websecure'
       - '--entrypoints.web.http.redirections.entryPoint.scheme=https'
-      # Disable dashboard
+      # Enable dashboard
       - '--api.dashboard=false'
+      # Set log level
+      # - '--log.level=DEBUG'
     ports:
       - '443:443'
       - '80:80'
-      # Dashboard: - "8080:8080"
+      # - "8080:8080"
     networks:
-      potz:
-        ipv4_address: 10.0.0.2
+      main:
     volumes:
       - '~/volumes/traefik:/letsencrypt'
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
 
-  web:
-    container_name: potz-web
-    hostname: web
+  potz:
+    container_name: potz
+    hostname: potz
     build:
       dockerfile: ./Dockerfile
       context: .
       target: 'production'
-      args:
-        FOO: bar
     networks:
-      potz:
-        ipv4_address: 10.0.0.3
+      main:
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.web.rule=Host(`potz.be`)'
-      - 'traefik.http.routers.web.rule=PathPrefix(`/`)'
-      - 'traefik.http.routers.web.entrypoints=websecure'
-      - 'traefik.http.routers.web.tls.certresolver=letsencrypt'
-      - 'traefik.http.services.web.loadbalancer.server.port=3000'
+      - 'traefik.http.routers.potz.rule=Host(`potz.be`,`www.potz.be`)'
+      - 'traefik.http.routers.potz.entrypoints=websecure'
+      - 'traefik.http.routers.potz.tls.certresolver=letsencrypt'
+      - 'traefik.http.services.potz.loadbalancer.server.port=3000'
     restart: always
 
 networks:
-  potz:
-    name: potz
-    ipam:
-      config:
-        - subnet: 10.0.0.0/24
+  main:
+    name: main
