--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,19 +45,19 @@ services:
       DATABASE_TYPE: postgresql
       APP_SECRET: Xjao33PYrysM7uJJ65mf55KnhMpGGgwA7z9A5WNLSVVJy3HV2
     depends_on:
-      postgres:
+      umami_postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl http://localhost:3000/api/heartbeat"]
+      test: ['CMD-SHELL', 'curl http://localhost:3000/api/heartbeat']
       interval: 5s
       timeout: 5s
       retries: 5
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.potz.rule=Host(`analytics.potz.be`)'
-      - 'traefik.http.routers.potz.entrypoints=websecure'
-      - 'traefik.http.routers.potz.tls.certresolver=letsencrypt'
-      - 'traefik.http.services.potz.loadbalancer.server.port=3000'
+      - 'traefik.http.routers.umami.rule=Host(`analytics.potz.be`)'
+      - 'traefik.http.routers.umami.entrypoints=websecure'
+      - 'traefik.http.routers.umami.tls.certresolver=letsencrypt'
+      - 'traefik.http.services.umami.loadbalancer.server.port=3000'
     restart: always
     networks:
       main:
@@ -72,7 +72,7 @@ services:
       - $HOME/volumes/umami:/var/lib/postgresql/data
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      test: ['CMD-SHELL', 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}']
       interval: 5s
       timeout: 5s
       retries: 5
