--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
+		"@types/howler": "^2.2.11",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
@@ -35,6 +36,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-loading-spinners": "^0.3.4",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -43,6 +45,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"howler": "^2.2.4",
 		"tailwindcss-safe-area": "^0.4.1"
 	}
 }
